--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -293,6 +293,140 @@ a.register{
   font-weight: bold;
 }
 
+.reservation-container {
+  background-color: #1b1b1b;
+  color: white;
+  padding: 30px;
+  border-radius: 10px;
+  max-width: 400px;
+  margin: 50px auto;
+  box-shadow: 0 4px 8px rgba(185, 16, 16, 0.2);
+  min-height: 36em;
+}
+
+.reservation-container h1 {
+  color: #e50914;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.reservation-container form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.reservation-container label {
+  font-size: 14px;
+  margin-bottom: 5px;
+  color: #f5f5f5;
+}
+
+.reservation-container input {
+  background-color: #2a2a2a;
+  color: white;
+  border: 1px solid #444;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 14px;
+  outline: none;
+  transition: border-color 0.3s ease;
+}
+
+.reservation-container input:focus {
+  border-color: #e50914;
+}
+
+.reservation-container button {
+  background-color: #e50914;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.reservation-container button:hover {
+  background-color: #b20710;
+}
+
+.reservation-container pre {
+  background-color: #2a2a2a;
+  color: white;
+  border: 1px solid #444;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 14px;
+  overflow-x: auto;
+  margin-top: 20px;
+}
+
+.reservation-container p {
+  font-size: 14px;
+  margin: 5px 0;
+  text-align: center;
+}
+
+.reservation-container p.error {
+  color: #e50914;
+  font-weight: bold;
+}
+
+.reservation-container p.success {
+  color: #4caf50;
+  font-weight: bold;
+}
+.seance-container {
+  background-color: #1b1b1b;
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 600px;
+  margin: 20px auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.seance-container h3 {
+  text-align: center;
+  color: #e50914;
+  margin-bottom: 15px;
+}
+
+.seance-list {
+  list-style: none;
+  padding: 0;
+}
+
+.seance-item {
+  background-color: #2a2a2a;
+  padding: 15px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.seance-item:hover {
+  background-color: #3b3b3b;
+}
+
+.seance-item.selected {
+  background-color: #e50914;
+}
+
+.seance-time,
+.seance-quality,
+.seance-room {
+  margin: 5px 0;
+}
+
+.seance-time strong,
+.seance-quality strong,
+.seance-room strong {
+  color: #e50914;
+}
 
 /* Footer styles */
 .footer-container {
