--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -24,7 +24,10 @@
   }
 }
 
-
+button.logout {
+  background-color: #1b1b1b;
+  color: #e50914;
+}
 /* Navigation styles */
 .nav-container {
   display: flex;
@@ -304,12 +307,14 @@ a.register{
   padding: 30px;
   border-radius: 10px;
   border: solid 5px rgba(185, 16, 16, 0.2);
-  max-width: 400px;
+  max-width: 47%;
   margin: 50px auto;
   min-height: 36em;
   font-family: Arial, sans-serif;
 }
-
+input#email-input {
+  width: 47%;
+}
 .reservation-container h1 {
   color: #e50914;
   text-align: center;
@@ -346,11 +351,11 @@ a.register{
 
 .reservation-container button {
   background-color: #e50914;
-  color: white;
+  color: rgb(224, 214, 214);
   border: none;
   padding: 10px;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 18px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
@@ -549,6 +554,7 @@ h3.siege {
 
 .seance-item.selected {
   background-color: #e50914;
+  color: #1b1b1b;
 }
 
 .seance-time,
@@ -560,7 +566,7 @@ h3.siege {
 .seance-time strong,
 .seance-quality strong,
 .seance-room strong {
-  color: #e50914;
+  color: rgb(32, 0, 0);
 }
 
 .response-container {
@@ -628,3 +634,63 @@ h3.siege {
   color: #e50914;
 }
 
+/* Commandes.css */
+
+.container {
+  margin: 20px auto;
+  max-width: 800px;
+  font-family: Arial, sans-serif;
+}
+
+h1 {
+  text-align: center;
+  color: #e50914;
+  margin-bottom: 20px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+.reservation-item {
+  background-color: #f0f9ff;
+  color: #0369a1;
+  margin-bottom: 15px;
+  padding: 15px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.reservation-item h3 {
+  
+  margin-bottom: 10px;
+}
+
+.reservation-item p {
+  margin: 5px 0;
+  font-size: 14px;
+  color: #555;
+}
+
+.reservation-item strong {
+  color: #333;
+}
+
+.error {
+  color: red;
+  font-weight: bold;
+  text-align: center;
+}
+
+.loading {
+  text-align: center;
+  font-size: 18px;
+  color: #333;
+}
+
+.no-reservations {
+  text-align: center;
+  font-size: 16px;
+  color: #666;
+}
