--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -83,9 +83,7 @@ a.logo {
   justify-content: center;
 }
 
-h1 {
-  margin-bottom: 20px;
-}
+
 
 .movie-carousel {
   display: flex;
@@ -99,7 +97,6 @@ h1 {
   padding: 10px;
   border-radius: 10px;
   width: 210px;
-  height: 300px; /* Définissez une hauteur fixe pour le conteneur */
   text-align: center;
   transition: transform 0.3s ease;
   display: flex;
@@ -819,4 +816,149 @@ ul {
 
 p.chargement {
   color: whitesmoke;
+}
+
+/* Styles pour la page d'accueil */
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #f5f5f5;
+}
+
+
+
+.movies-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Grille responsive */
+  gap: 20px;
+  padding: 20px;
+}
+
+/* Carte de film */
+.movie-card {
+  background-color:#2a2a2a ;
+
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre légère */
+  overflow: hidden;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.movie-card:hover {
+  transform: translateY(-5px); /* Légère élévation au survol */
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+}
+
+/* Image du film */
+.movie-card img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+/* Contenu de la carte */
+.movie-card h2 {
+  font-size: 1.2em;
+  margin: 10px;
+  color: #e50914; /* Couleur rouge Netflix */
+}
+
+.movie-card p {
+  margin: 10px;
+  color: #fff;
+  font-size: 0.9em;
+}
+
+/* Note */
+.movie-card p:last-child {
+  font-weight: bold;
+  color: #fff;
+}
+
+
+.add-film-container {
+  width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+
+
+.film-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.film-form label {
+  display: flex;
+  flex-direction: column;
+  font-weight: bold;
+  color: whitesmoke;
+}
+
+.film-form input,
+.film-form textarea {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.film-form button {
+  margin-top: 10px;
+  padding: 10px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.film-form button:hover {
+  background-color: #45a049;
+}
+
+.message {
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.message.success {
+  background-color: #d4edda;
+  color: #155724;
+}
+
+.message.error {
+  background-color: #f8d7da;
+  color: #721c24;
+}
+
+.info-item {
+  color: #e50914;
+}
+
+/* Ajoute des médias queries pour la réactivité */
+@media (max-width: 768px) {
+  .movies-list {
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  }
+
+  .movie-card img {
+    height: 200px;
+  }
+
+  .movie-card h2 {
+    font-size: 1em;
+  }
+
+  .movie-card p {
+    font-size: 0.8em;
+  }
 }
